--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@ dist/
 node_modules/
 .DS_Store
 .env
+pesquisa/.DS_Store
+.gitignore
+etica/.DS_Store
+etica/.DS_Store
+pesquisa/.DS_Store
+etica/.DS_Store
+.gitignore
+.DS_Store
